[gd_scene load_steps=2 format=3 uid="uid://dmb8b46dp5h1a"]

[ext_resource type="Script" path="res://Scripts/pages/ranking.gd" id="1_dmenf"]

[node name="ranking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmenf")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0295139
anchor_top = 0.135802
anchor_right = 0.975694
anchor_bottom = 0.813272
horizontal_scroll_mode = 0
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1090, 0)
layout_mode = 2

[node name="Voltar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0217014
anchor_top = 0.867284
anchor_right = 0.222222
anchor_bottom = 0.962963
text = "voltar
"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0451389
anchor_top = 0.0648148
anchor_right = 0.671875
anchor_bottom = 0.145062
text = "Pontuações para o baralho <baralhoNome>:"
metadata/_edit_use_anchors_ = true

[node name="resetRank" type="Button" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 567.0
offset_right = 1127.0
offset_bottom = 621.0
text = "Resetar pontuações 
para este baralho"

[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="resetRank" to="." method="_on_reset_rank_pressed"]
